6946: win os update